tests/solidity-semantic-tests/out/errors/error_selector/C.approval.teal
#pragma version 10
#pragma typetrack false

// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/error_selector.sol.C.approval_program() -> uint64:
main:
    intcblock 1 0
    bytecblock 0x92bbf6e8 "s1" "s2" "s3" "s4"
    pushint 4096
    bzero
    dup
    store 5
    txn ApplicationID
    bnz main_after_if_else@2
    bytec_1 // "s1"
    bytec_0 // 0x92bbf6e8
    app_global_put
    bytec_2 // "s2"
    pushbytes 0x002ff067
    app_global_put
    bytec_3 // "s3"
    bytec_0 // 0x92bbf6e8
    app_global_put
    bytec 4 // "s4"
    bytec_0 // 0x92bbf6e8
    app_global_put
    intc_0 // 1
    return

main_after_if_else@2:
    dup
    store 0
    load 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000080
    replace2 64
    store 0
    txn OnCompletion
    !
    assert
    txn ApplicationID
    assert
    pushbytess 0x9a053be4 0x6abab84a 0xd1b8e38f // method "test1()(byte[4],byte[4],byte[4],byte[4])", method "test2()(byte[4],byte[4],byte[4],byte[4])", method "test3()byte[4]"
    txna ApplicationArgs 0
    match test1 test2 test3
    err


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/error_selector.sol.C.test1[routing]() -> void:
test1:
    txn GroupIndex
    bz test1_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

test1_ternary_merge@4:
    !
    assert // not payable
    pushbytes 0x151f7c7592bbf6e8002ff06792bbf6e892bbf6e8
    log
    intc_0 // 1
    return

test1_ternary_false@3:
    intc_1 // 0
    b test1_ternary_merge@4


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/error_selector.sol.C.test2[routing]() -> void:
test2:
    txn GroupIndex
    bz test2_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

test2_ternary_merge@4:
    !
    assert // not payable
    intc_1 // 0
    bytec_1 // "s1"
    app_global_get_ex
    assert // check s1 exists
    intc_1 // 0
    bytec_2 // "s2"
    app_global_get_ex
    assert // check s2 exists
    intc_1 // 0
    bytec_3 // "s3"
    app_global_get_ex
    assert // check s3 exists
    intc_1 // 0
    bytec 4 // "s4"
    app_global_get_ex
    assert // check s4 exists
    uncover 3
    uncover 3
    concat
    uncover 2
    concat
    swap
    concat
    pushbytes 0x151f7c75
    swap
    concat
    log
    intc_0 // 1
    return

test2_ternary_false@3:
    intc_1 // 0
    b test2_ternary_merge@4


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/error_selector.sol.C.test3[routing]() -> void:
test3:
    txn GroupIndex
    bz test3_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

test3_ternary_merge@4:
    !
    assert // not payable
    pushbytes 0x151f7c7528811f59
    log
    intc_0 // 1
    return

test3_ternary_false@3:
    intc_1 // 0
    b test3_ternary_merge@4
